# WorkJournalMaker

./: .gitignore  :memory:  BUILD_AND_TEST.md  BUILD_DEPLOYMENT_INSTRUCTIONS.md  CLAUDE.local.md  CLAUDE.md  Daily_Work_Journal_Web_App_Implementation_Blueprint.md  Daily_Work_Journal_Web_App_Implementation_Blueprint_FINAL.md  Dockerfile  Git_Branching_Strategy_for_Web_Refactor.md  README.md  STEP_5_COMPLETION_SUMMARY.md  TIMEZONE_FIX_SUMMARY.md  WorkJournalMaker.spec  base_llm_client.py  bedrock_client.py  bedrock_model_checker.py  cborg_client.py  config.yaml.example  config_fix.md  config_manager.py  conftest.py  content_processor.py  debug_database_sync.py  debug_settings_error.py  docker-compose.server.yml  docker-compose.yml  file_discovery.py  file_parser_v2_spec.md  google_genai_client.py  improvement_metaplan.md  improvements.md  license.txt  llm_client.py  llm_data_structures.py  logger.py  mcp_fix.txt  mcp_server_diagnosis.txt  output_manager.py  package-lock.json  (+24 more)
assets/: icon.icns
build_system/: __init__.py  build_config.py  local_builder.py
completion_summaries/: DESKTOP_PACKAGING_SESSION_1_COMPLETION_SUMMARY.md  PROMPT_10_SETTINGS_UI_COMPONENTS_COMPLETION.md  PROMPT_11_SETTINGS_JAVASCRIPT_LOGIC_COMPLETION.md  PROMPT_12_CSS_STYLING_COMPLETION.md  PROMPT_14_PERFORMANCE_COMPATIBILITY_TESTING_COMPLETION_SUMMARY.md  PROMPT_2_WORK_WEEK_CALCULATION_LOGIC_COMPLETION_SUMMARY.md  PROMPT_3_WORK_WEEK_VALIDATION_ERROR_HANDLING_COMPLETION_SUMMARY.md  PROMPT_6_SETTINGS_API_ENDPOINTS_COMPLETION.md  PROMPT_7_ENTRY_MANAGER_WORK_WEEK_INTEGRATION_COMPLETION_SUMMARY.md  (+18 more)
(+354 files in other folders)
