[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workjournalmaker"
version = "1.0.0"
requires-python = ">=3.8"
description = "Generate intelligent weekly and monthly summaries of daily work journal files using multiple LLM providers."

dependencies = [
    "chardet>=5.0.0",
    "boto3>=1.26.0",
    "botocore>=1.29.0",
    "PyYAML>=6.0.0",
    "google-genai",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "greenlet>=3.0.0",
    "python-dateutil>=2.8.0",
    "aiofiles>=23.0.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[tool.setuptools.packages.find]
include = [
    "web*",
    "desktop*",
    "scripts*",
    "build_system*",
    "debug_scripts*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
